--- a/SlnAngular/AngularApp/AngularApp.csproj
+++ b/SlnAngular/AngularApp/AngularApp.csproj
@@ -69,9 +69,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="src\app\app.component.html" />
     <Content Include="src\app\app.component.js" />
     <Content Include="src\app\app.component.spec.js" />
     <Content Include="src\app\app.module.js" />
+    <Content Include="src\app\Employee\employee.component.html" />
+    <Content Include="src\app\Employee\employee.component.css" />
+    <Content Include="src\app\Employee\employeeCount.component.html" />
+    <Content Include="src\app\Employee\employeeList.component.html" />
+    <Content Include="src\app\Employee\employeeList.component.css" />
     <Content Include="src\favicon.ico" />
     <Content Include="src\index.html" />
     <Content Include="src\main.js" />
@@ -105,6 +111,10 @@
     <TypeScriptCompile Include="src\app\app.component.spec.ts" />
     <TypeScriptCompile Include="src\app\app.component.ts" />
     <TypeScriptCompile Include="src\app\app.module.ts" />
+    <TypeScriptCompile Include="src\app\Employee\employee.component.ts" />
+    <TypeScriptCompile Include="src\app\Employee\employeeCount.component.ts" />
+    <TypeScriptCompile Include="src\app\Employee\employeeList.component.ts" />
+    <TypeScriptCompile Include="src\app\Employee\Model\employee.ts" />
     <TypeScriptCompile Include="src\main.ts" />
   </ItemGroup>
   <ItemGroup>
