--- a/SlnAngular/AngularApp/AngularApp.csproj
+++ b/SlnAngular/AngularApp/AngularApp.csproj
@@ -78,6 +78,7 @@
     <Content Include="src\app\Employee\employeeCount.component.html" />
     <Content Include="src\app\Employee\employeeList.component.html" />
     <Content Include="src\app\Employee\employeeList.component.css" />
+    <Content Include="src\app\Others\simple.component.html" />
     <Content Include="src\favicon.ico" />
     <Content Include="src\index.html" />
     <Content Include="src\main.js" />
@@ -115,6 +116,7 @@
     <TypeScriptCompile Include="src\app\Employee\employeeCount.component.ts" />
     <TypeScriptCompile Include="src\app\Employee\employeeList.component.ts" />
     <TypeScriptCompile Include="src\app\Employee\Model\employee.ts" />
+    <TypeScriptCompile Include="src\app\Others\simple.component.ts" />
     <TypeScriptCompile Include="src\main.ts" />
   </ItemGroup>
   <ItemGroup>
