--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,17 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+
+# Typescript Auto-generated files
+# Note: all files must be TS files in this directory or ordinary JS files could be removed
+# Modify as needed to preserve files and be more explicit
+
+
+SlnAngular/AngularApp/src/app/Employee/Model/*.js
+SlnAngular/AngularApp/src/app/Employee/Model/*.js.map
+
+SlnAngular/AngularApp/src/app/**/*.js
+SlnAngular/AngularApp/src/app/**/*.js.map
+
+SlnAngular/AngularApp/src/app/*.js
+SlnAngular/AngularApp/src/app/*.js.map
